--- a/main.ipynb
+++ b/main.ipynb
@@ -49,7 +49,7 @@
     "window.geometry(\"600x1000\") \n",
     "\n",
     "# Load and display an image\n",
-    "image = Image.open(\"nile.png\")\n",
+    "image = Image.open(\"image/nile.png\")\n",
     "photo = ImageTk.PhotoImage(image)\n",
     "image_label = tk.Label(window, image=photo)\n",
     "image_label.pack()\n",
